CS_SBOX_20150209_01/Metadata/unpackaged/objects/Credit_for_Existing_Services_Quote__c.object
<CustomObject>
    <description>Created by LM on 3/12/2014 for Phase2</description>
    <fields>
        <fullName>Account_Name__c</fullName>
        <formula>Opportunity__r.Account.Name</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Account Name</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Comments__c</fullName>
        <description>Created by LM on 3/12/14 for phase2</description>
        <label>Comments</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Monitoring_Credit_Amount__c</fullName>
        <defaultValue>0</defaultValue>
        <description>Created by LM on 3/21/14 for Phase2</description>
        <label>Monitoring Credit Amount</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Opportunity__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Opportunity</label>
        <referenceTo>Opportunity</referenceTo>
        <relationshipLabel>Credit for Existing Services Quotes</relationshipLabel>
        <relationshipName>Credit_for_Existing_Services_Quotes</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Plan_Credit_Amount__c</fullName>
        <defaultValue>0</defaultValue>
        <description>Created by LM on 3/21/14 for Phase2</description>
        <label>Plan Credit Amount</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Quote_Expiration_Date__c</fullName>
        <description>Created by LM on 3/21/14 for Phase2</description>
        <label>Credit Expiration Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Rejected_Reason__c</fullName>
        <description>Created by LM on 3/12/14 for Phase2</description>
        <label>Rejected Reason</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Start_Date_of_New_Contract__c</fullName>
        <description>Created by LM on 3/12/14 for phase2</description>
        <label>Start Date of New Contract</label>
        <required>true</required>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Status__c</fullName>
        <description>Created by LM on 3/12/14 for Phase2</description>
        <label>Credit Status</label>
        <picklist>
            <picklistValues>
                <fullName>New</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>In Progress</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Completed</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Rejected</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <label>Credit for Existing Services Quote</label>
    <listViews>
        <fullName>All</fullName>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <nameField>
        <displayFormat>CFESQ-{000000}</displayFormat>
        <label>Credit for Existing Services Quote Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Credit for Existing Services Quotes</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>